# tubes

./: .coveragerc  .failonoutput.py  .gitignore  .pydoctor.cfg  .travis.yml  README.rst  index.html  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
.travis/: build_docs.sh
docs/: Makefile  classIndex.html  conf.py  index.html  index.rst  make.bat  moduleIndex.html  nameIndex.html  objects.inv  spelling_wordlist.txt  tube.rst  tubes.__init__.html  tubes._components.html  tubes._siphon.SiphonPendingValues.html  tubes._siphon._PlaceholderPause.html  tubes._siphon._Siphon.html  tubes._siphon._SiphonDrain.html  tubes._siphon._SiphonFount.html  tubes._siphon._SiphonPiece.html  tubes._siphon.html  tubes.fan.In.html  tubes.fan.Out.html  tubes.fan.Thru.html  tubes.fan._AggregatePause.html  tubes.fan._InDrain.html  tubes.fan._InFount.html  tubes.fan._OutDrain.html  tubes.fan._OutFount.html  tubes.fan.html  tubes.framing._CarriageReturnRemover.html  tubes.framing._FramesToSegments.html  tubes.framing._NotDisconnecting.html  tubes.framing._SegmentsToFrames.html  tubes.framing._Transporter.html  tubes.framing.html  tubes.html  tubes.itube.AlreadyUnpaused.html  tubes.itube.IDivertable.html  tubes.itube.IDrain.html  tubes.itube.IFount.html  (+35 more)
docs/_extensions/: apilinks.py
docs/listings/: echoflow.py  echonetstrings.py  fanchat.py  portforward.py  (+2 more)
sketches/: amptube.py  fanchat.py  integrafan.py  notes.rst
tubes/: __init__.py  _components.py  _siphon.py  fan.py  framing.py  itube.py  kit.py  listening.py  memory.py  protocol.py  queue.py  routing.py  tube.py  undefer.py
(+13 files in other folders)
