[metadata]
name = Tubes
version = 0.2.0
description = Flow control and backpressure for event-driven applications.
license = MIT
url = https://github.com/twisted/tubes/

[options]
packages = find:
package_dir = tubes=tubes
install_requires =
    six
    Twisted
include_package_data = True

[options.packages.find]
exclude =
   

[bdist_wheel]
universal = 1

[flake8]
ignore = E302,E303,E402
